Molly's March 2019 content changes

--- a/index.html
+++ b/index.html
@@ -199,7 +199,9 @@
           <!-- END Modal -->
           <span class="image-caption-content t-center">
           <a href="https://www.americanancestors.org/historic-catholic-records-online">
-          <button class="slideshow-btn btn site-button"><span class="btn-value btn-value-right" style="white-space: normal;">Sign up free to see parish records</span></button></a><p><a href="#video" class="" title="How to browse records" name="video">How to browse records</a></p><p><a href="https://www.americanancestors.org/catholic-records-fund">Support this project</a></p></span>
+          <button class="slideshow-btn btn site-button"><span class="btn-value btn-value-right" style="white-space: normal;">Sign up free to see parish records</span></button></a><br />
+          <a href="https://www.americanancestors.org/search/databasesearch/2726/massachusetts-roman-catholic-archdiocese-of-boston-records-1789-1900">
+          <button class="slideshow-btn btn site-button" style="margin-top: 10px;"><span class="btn-value btn-value-right" style="white-space: normal; padding: 0 10px;">Search the collection</span></button></a><p><a href="#video" class="" title="How to browse records" name="video">How to browse records</a></p><p><a href="https://www.americanancestors.org/catholic-records-fund">Support this project</a></p></span>
         </div>
         <p>
           Carroll was only too happy to give Cheverus a mission:  minister to the people, unite the scattered faithful and help the church in Boston take root.
@@ -559,7 +561,7 @@
           <h3 class="t-center uppercase">From Paper to Pixels</h3>
           <div class="col-lg-6 col-sm-6 col-md-6 slideshow-block-content">
             <p>937 bound volumes. 400,000 hand-written pages. 10 million names. How does NEHGS turn all that paper-based information into a searchable online database?  We work closely with the Archdiocese and our own scholars to conserve any damaged volumes, evaluate records, decipher obscure entries, and carefully guide our transcriptionists so their work is as accurate as possible. This painstaking process ensures faithful transcriptions&mdash;a critical factor for family historians and researchers.</p>
-            <p>View the slideshow for a close-up look at how NEHGS is working to create an online database from the parish volumes. Though the fully searchable data will not be available immediately, anyone can browse images of parish records as they are completed. Discover <a href="#video" class="" title="How to browse records" name="video">how to browse records</a>.
+            <p>View the slideshow for a close-up look at how NEHGS is working to create an online database from the parish volumes. This project is a work in progress, Discover <a href="#video" class="" title="How to browse records" name="video">how to browse</a> available records for free, or <a href="https://www.americanancestors.org/search/databasesearch/2726/massachusetts-roman-catholic-archdiocese-of-boston-records-1789-1900">search</a> for your ancestors in our fully-indexed database available to NEHGS members.
             </p>
           </div>
 
@@ -617,7 +619,7 @@
                             <img src="images/slider-images/volumeslideshow4.jpg" alt="Treating the Volumes">
                               <div class="carousel-caption">
                                 <h4>Special treatment</h4>
-                                <p>If the volumes require treatment in order to be scanned safely, NEHGS Conservation Technician Deborah Rossi and her team work on them in our conservation lab. </p>
+                                <p>If the volumes require treatment in order to be scanned safely, NEHGS conservators work on them in our conservation lab. </p>
                               </div>
                           </div>
 
@@ -670,18 +672,18 @@
                           </div>
 
                           <div class="item">
-                            <img src="images/slider-images/directions.jpg" alt="Volunteer looking at directions">
+                            <img src="images/slider-images/transcribing.jpg" alt="Volunteer transcribing scanned records">
                               <div class="carousel-caption">
-                                <h4>Future Goals</h4>
-                                <p>The next stage of this project is to create a fully searchable database available to members.  Working towards this goal, volunteers are given detailed instructions on interpreting the handwritten records.</p>
+                                <h4>Make it searchable</h4>
+                                <p>Volunteers carefully read each record and transcribe first name, last name, parents’ and witnesses’ names, full date, record type, and location into a spreadsheet which is used to create the searchable database.   </p>
                               </div>
                           </div>
 
                           <div class="item">
-                            <img src="images/slider-images/transcribing.jpg" alt="Volunteer transcribing scanned records">
+                            <img src="images/slider-images/searchpage.jpg" alt="Search page for Catholic Records database">
                               <div class="carousel-caption">
-                                <h4>Make it searchable</h4>
-                                <p>Volunteers carefully read each record and transcribe first name, last name, parents’ and witnesses’ names, full date, record type, and location into a spreadsheet which will ultimately be used to create the searchable database.   </p>
+                                <h4>Searchable database</h4>
+                                <p>We’re creating a fully searchable database available to NEHGS members.  Type any name into the search fields to begin your search.  Be sure to check out the Search Tips!</p>
                               </div>
                           </div>
 
@@ -2149,6 +2151,24 @@
               <p class="rel-caption">Find free family history guides</p>
             </a>
           </div>
+          <div class="col-md-3 col-xs-6">
+            <a href="https://www.americanancestors.org/education/learning-resources/read/new-england-catholic-records">
+              <div class="imgWrap"><img class="rel-image" src="images/subjectguide.jpg" alt=""></div>
+              <p class="rel-caption">Subject guide on Catholic records</p>
+            </a>
+          </div>
+          <div class="col-md-3 col-xs-6">
+            <a href="https://youtu.be/71Jepxc1TbY">
+              <div class="imgWrap"><img class="rel-image" src="images/webinar.jpg" alt=""></div>
+              <p class="rel-caption">Webinar with Library Director Jean Maguire</p>
+            </a>
+          </div>
+          <div class="col-md-3 col-xs-6">
+            <a href="https://www.americanancestors.org/search/databasesearch/2766/boston-ma-st-augustine-cemetery-records-1819-1859">
+              <div class="imgWrap"><img class="rel-image" src="images/staugustine.jpg" alt=""></div>
+              <p class="rel-caption">St. Augustine Cemetery records</p>
+            </a>
+          </div>
         </div>
       </div>
       <div class="seperator"></div>
@@ -2201,7 +2221,7 @@
 
         <ul class="resources-list">
           <li>“Artifacts of Faith” by Abbey Schultz</li>
-          <li>“Rumors and Riots at the Charlestown Convent” and “Faith and Industry in Lowell” by Kelsey Jarboe</li>
+          <li>“Rumors and Riots at the Charlestown Convent” and “Faith and Industry in Lowell” by Julian K. Jarboe</li>
           <li>Special thanks to Paul Zotov, Molly Rogers, Jean Maguire, Sam Sturgis, Marie Daly, Andy Hanson-Dvoracek, Anand Sharma, Mangesh Gawade and Sheetal Parekh</li>
           <li>Photography by Claire Vail</li>
         </ul>
