Changes to Related Resources

--- a/index.html
+++ b/index.html
@@ -2146,9 +2146,9 @@
             </a>
           </div>
           <div class="col-md-3 col-xs-6">
-            <a href="https://www.americanancestors.org/Education/Learning-Resources/">
-              <div class="imgWrap"><img class="rel-image" src="images/education.jpg" alt=""></div>
-              <p class="rel-caption">Find free family history guides</p>
+            <a href="https://youtu.be/x6gnjrrl3TQ">
+              <div class="imgWrap"><img class="rel-image" src="images/rogers-webinar-thumb.jpg" alt=""></div>
+              <p class="rel-caption">Learn about an expansion of the project</p>
             </a>
           </div>
           <div class="col-md-3 col-xs-6">
@@ -2167,6 +2167,12 @@
             <a href="https://www.americanancestors.org/search/databasesearch/2766/boston-ma-st-augustine-cemetery-records-1819-1859">
               <div class="imgWrap"><img class="rel-image" src="images/staugustine.jpg" alt=""></div>
               <p class="rel-caption">St. Augustine Cemetery records</p>
+            </a>
+          </div>
+          <div class="col-md-3 col-xs-6">
+            <a href="https://www.arcgis.com/home/item.html?id=5a85c0177ded40fbbc46a26babe6dba0">
+              <div class="imgWrap"><img class="rel-image" src="images/archdiocese-boston-map.jpg" alt=""></div>
+              <p class="rel-caption">Search the Parish Boundary Map</p>
             </a>
           </div>
         </div>
@@ -2220,7 +2226,7 @@
         <h1 class="header section-title">CREDITS</h1>
 
         <ul class="resources-list">
-          <li>“Artifacts of Faith” by Abbey Schultz</li>
+          <li>“Artifacts of Faith” by Thomas Grebenchick</li>
           <li>“Rumors and Riots at the Charlestown Convent” and “Faith and Industry in Lowell” by Julian K. Jarboe</li>
           <li>Special thanks to Paul Zotov, Molly Rogers, Jean Maguire, Sam Sturgis, Marie Daly, Andy Hanson-Dvoracek, Anand Sharma, Mangesh Gawade and Sheetal Parekh</li>
           <li>Photography by Claire Vail</li>
