Update Gulpfile and Google Maps Marker to AdvancedMarker

--- a/index.html
+++ b/index.html
@@ -2246,7 +2246,7 @@
     <script src="js/jquery.superscrollorama.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
     <!-- endbuild -->
-    <script type="text/javascript"  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5Cjmxs3eyJ4vMKAO4MGKrq4rCV88uqI8"></script>
+    <script type="text/javascript"  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA5Cjmxs3eyJ4vMKAO4MGKrq4rCV88uqI8&libraries=marker"></script>
 
   </body>
   <!-- Body End -->
