--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <!-- Logo Link -->
             <a href="https://www.americanancestors.org/index.aspx" class="logo-link scroll">
               <!-- Logo Image / data-second-logo for only white nav -->
-              <img src="images/logo.png" alt="AmericanAncestors.org" />
+              <img id="aa-logo" src="images/logo.png" alt="AmericanAncestors.org" />
             </a>
           </div>
           <!-- End Logo Area -->
